# rag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  retrieve.json  temp_audit_final.md
backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: endpoints.py  error_handler.py  errors.py  middleware.py  schemas.py
backend/cli/: rag_debug_cli.py
backend/config/: debug_settings.py  openai_config.py  settings.py
backend/core/: artifact_logger.py  artifact_storage.py  chunking_metadata.py  chunking_models.py  chunking_service.py  data_models.py  embedding_models.py  embedding_provider.py  embedding_quality.py  embedding_service.py  exceptions.py  file_validator.py  format_detector.py  generation_models.py  generation_services.py  guardrail_error_mapper.py  guardrails.py  ingestion_extraction.py  ingestion_models.py  ingestion_orchestrator.py  ingestion_store.py  language_detection.py  logging.py  normalization.py  prompt_models.py  prompt_services.py  query_cache.py  query_models.py  query_services.py  rate_limiter.py  text_extraction_service.py  tracing.py  vector_storage.py  vector_storage_postgres.py
backend/core/chunkers/: recursive_chunker.py  sliding_window_chunker.py
backend/core/extractors/: markdown_extractor.py  pdf_docling_extractor.py  pdf_extractor.py  pdf_llamaparse_extractor.py  pdf_ocr_extractor.py  pdf_pipeline.py  text_extractor.py
backend/data_layer/: config.py  pinecone_client.py  postgres_client.py  storage_service.py
backend/evaluation/: quality_evaluator.py
backend/jobs/: cleanup_debug_artifacts.py
backend/migrations/: init.sql
backend/providers/: openai_client.py
backend/scripts/: provision_pinecone.py  test_providers.py
backend/tests/: conftest.py
backend/tests/fixtures/: generate_pdf_fixtures.py  mocks.py  sample_chunk.json  sample_doc.txt  sample_prompts.json  sample_requests.json  sample_texts.txt
backend/tests/integration/: test_api_integration.py  test_chunking_service.py  test_debug_artifact_storage_postgres.py  test_debug_artifacts_endpoint.py  test_embedding_service.py  test_generation_orchestrator.py  test_generation_orchestrator_timeout.py  test_ingest_endpoint.py  test_ingestion_orchestrator.py  test_logging_middleware.py  test_openai_embedding.py  test_openai_generation.py  test_pdf_ingestion_flow.py  test_pinecone_connectivity.py  test_pinecone_operations.py  test_postgres_connectivity.py  test_postgres_operations.py  test_postgres_vector_storage.py  test_query_orchestrator.py  (+10 more)
(+152 files in other folders)
